--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/modal.css">
     <title>Modal window</title>
 </head>
 <body>
+
+    <div class="container">
     <h1>Modal window</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis doloremque velit voluptatum fugit, nobis dolorem! Aut, quisquam aliquid. Quis ea sit corrupti sed sint saepe a debitis expedita maiores blanditiis, doloremque provident error voluptatum maxime quas ex vitae, assumenda tempore deserunt. Dolorum consequatur praesentium totam maiores odio vero iusto ea quasi molestiae corrupti facere, alias expedita cumque? Facere perspiciatis repudiandae ipsa, officia impedit deserunt quas! Fugit amet laboriosam voluptatum mollitia ea sapiente eveniet! Quaerat eius ratione quasi itaque nulla. Magni doloremque sequi distinctio reprehenderit ad? Quod aperiam, odit unde officiis totam numquam sapiente qui labore nisi laborum necessitatibus architecto eveniet!</p>
-
+        <main>
+   
+    </main>
+    </div>
+</div>
     <script src="base.js"></script>
     <script src="plugins/modal.js "></script>
     <script src="index.js"></script>
 </body>
 </html>
+
